# botcito-for-millions

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  test1.ipynb
.github/workflows/: cloudfunction.yml  deploy.yml  deploy_airfllow_image.yml  deploy_cloudfunction.yml  deploy_handle_stock_request.yml  deploy_pullrepo.yml  terraform.yml  terraform_infra.yml
dags/: airflow_healthcheck_dag.py
docker/: Dockerfile
docker/airflow/: Dockerfile
functions/get_stock_function/: Dockerfile  README.md  main.py  tickers.json
functions/handle_stock_request/: .dockerignore  Dockerfile  README.md  main.py  requirements.txt  tickers.json
infra/: .gitignore  README.md  backend.tf  data.tf  initscript_chef.sh  locals.tf  main.tf  variables.tf
notebook/: test-models.ipynb
notebooks/: test-models.ipynb
src/botcito_core/: alerts.py  backtest.py  model.py  monitoring.py  news_agent.py  spread_calculator.py  statistical_validation.py  types.py
src/notifications_service/: main.py
