[project]
name = "botcito-para-ganar-millones"
version = "0.1.0"
description = "Botcito para ganar dineros"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    { name = "Leonel Aliaga", email = "leonel.aliaga.v@gmail.com"},
    { name = "Rainier Moreno", email = "rmorenocueva@gmail.com"}
    ]

dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "requests>=2.32.5",
    "statsmodels>=0.14.6",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
]
